--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 
 \usepackage{amsmath}		                          %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
-%\usepackage{mathrsfs}
+\usepackage{mathrsfs}                             %für Geogebra-Zeichnungen
 \usepackage[T1]{fontenc}
 \usepackage[margin=2cm]{geometry}	                %Seitenrand
 \usepackage{fancyhdr}	                            %Header
