--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -73,21 +73,15 @@ Für manche Folgen sind beide Darstellungen möglich, wobei die explizite Darste
 
 \subsubsection{Web-Diagramme}
 
-<<<<<<< HEAD
-%graph mit nur funktion und diagonale
-=======
->>>>>>> refs/remotes/origin/master
 
-Hier handelt es sich um ein graphisches Verfahren, das dazu dient, das Verhalten einer Folge, deren Darstellung rekursiv ist, zu untersuchen.  Es ermögicht die Beobachtung des Langzeitverhaltens (Konvergenz, Divergenz oder Oszillation) einer rekursiven Folge. 
-\\
-\begin{minipage}[c]{0,5\textwidth}
-Dazu muss man der rekursiven Folgenvorschrift eine \textcolor{blue}{Funktion $f(a_{n-1})=a_{n}$} zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen". Man muss verstehen, dass es sich hierbei nicht um den Graphen der Folge handelt, die Werte der Folgenglieder sind nicht wie gewohnt abzulesen. Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die \textcolor{blue}{Hauptdiagonale} ein (entspricht dem Graphen von $f(x)=x$).  Exemplarisch wird hier die Folge $a_{n+1}=2\sqrt{a_n}+2$ behandelt, dementsprechend ist die Hilfsfunktion hier $f$ mit $f(x)=2\sqrt{x} +2$.\\
+Hier handelt es sich um ein graphisches Verfahren, das dazu dient, das Verhalten einer Folge, deren Darstellung rekursiv ist, zu untersuchen.  Es ermögicht die Beobachtung des Langzeitverhaltens (Konvergenz, Divergenz oder Oszillation) einer rekursiven Folge.\\\\
+\begin{minipage}{0.5\textwidth}
+Dazu muss man der rekursiven Folgenvorschrift eine \textcolor{blue}{Funktion $f(a_{n-1})=a_{n}$} zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen". Man muss verstehen, dass es sich hierbei nicht um den Graphen der Folge handelt, die Werte der Folgenglieder sind nicht wie gewohnt abzulesen. Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die \textcolor{blue}{Hauptdiagonale} ein (entspricht dem Graphen von $f(x)=x$).  Exemplarisch wird hier die Folge $a_{n+1}=2\sqrt{a_n}+2$ behandelt, dementsprechend ist die Hilfsfunktion hier $f$ mit $f(x)=2\sqrt{x} +2$.
 \end{minipage}
-\begin{minipage} 
-\definecolor{ttqqqq}{rgb}{0.2,0,0}
-\definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}
-<<<<<<< HEAD
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm]
+\begin{minipage}{0.5\textwidth}
+	\definecolor{ttqqqq}{rgb}{0.2,0,0}
+	\definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}
+	\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm,scale=0.5]
 	\begin{axis}[
 	x=1cm,y=1cm,
 	axis lines=middle,
@@ -107,36 +101,11 @@ Dazu muss man der rekursiven Folgenvorschrift eine \textcolor{blue}{Funktion $f(
 	\draw[color=ttqqqq] (-1.446396560176685,-3.1751691937860826) node {$Hauptdiagonale$};
 	\end{scriptsize}
 	\end{axis}
-\end{tikzpicture}
-\\\\
-Dann trägt man den Wert des ersten Folgegliedes auf die Abzissenachse ein und verbindet ihn mit der entsprechenden Funktion anhand eines vertikalen Striches. Der Ordinatenwert, der so erhalten wird (Punkt \textcolor{blue}{A}), entspricht dem Wert von $a_1$. Um den Vorgang erneuern zu können, muss der gefundene Wert wieder auf die Abzissenachse, dazu benutzt man die Hauptdiagonale als "Spiegel". Ein horizontaler Strich bis zur Hauptdiagonale (zum Punkt \textcolor{blue}{B})  und ein vertikaler bis zur Abzissenachse lösen das Problem. So ist der Wert von $a_1$ aud der Abzissenachse, dort wird er für den nächsten Schritt benötigt.
-=======
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm,scale=0.5]
-\begin{axis}[
-x=1cm,y=1cm,
-axis lines=middle,
-ymajorgrids=true,
-xmajorgrids=true,
-xmin=-5.088547334373463,
-xmax=10.65108937607874,
-ymin=-3.575119239735864,
-ymax=9.474639170629912,
-xtick={-4,-2,...,22},
-ytick={-4,-2,...,10},]
-\clip(-5.088547334373463,-4.075119239735864) rectangle (22.65108937607874,10.874639170629912);
-\draw[line width=2pt,color=sexdts,smooth,samples=100,domain=2.505408374793447e-7:22.65108937607874] plot(\x,{2*sqrt((\x))+2});
-\draw[line width=2pt,color=ttqqqq,smooth,samples=100,domain=-5.088547334373463:22.65108937607874] plot(\x,{(\x)});
-\begin{scriptsize}
-\draw[color=sexdts] (0.8405353212957103,2.9444911186724285) node {$f$};
-\draw[color=ttqqqq] (-1.446396560176685,-3.1751691937860826) node {$Hauptdiagonale$};
-\end{scriptsize}
-\end{axis}
-\end{tikzpicture}
+	\end{tikzpicture}
 \end{minipage}
->>>>>>> refs/remotes/origin/master
 
 
-\begin{minipage}{0,5\textwidth}
+\begin{minipage}{0.5\textwidth}
 \definecolor{rvwvcq}{rgb}{0.08235294117647059,0.396078431372549,0.7529411764705882}
 \definecolor{ffqqqq}{rgb}{1,0,0}
 \definecolor{ttqqqq}{rgb}{0.2,0,0}
@@ -172,18 +141,18 @@ ytick={-2,-1,...,10},]
 \end{axis}
 \end{tikzpicture}
 \end{minipage}
-\begin{minipage}{0,5\textwidth}
+\begin{minipage}{0.5\textwidth}
 Dann trägt man den Wert des ersten Folgegliedes auf die Abzissenachse ein und verbindet ihn mit der entsprechenden Funktion anhand eines vertikalen Striches. Der Ordinatenwert, der so erhalten wird (Punkt \textcolor{blue}{A}), entspricht dem Wert von $a_1$. Um den Vorgang erneuern zu können, muss der gefundene Wert wieder auf die Abzissenachse, dazu benutzt man die Hauptdiagonale als "Spiegel". Ein horizontaler Strich bis zur Hauptdiagonale (zum Punkt \textcolor{blue}{B})  und ein vertikaler bis zur Abzissenachse lösen das Problem. So ist der Wert von $a_1$ aud der Abzissenachse, dort wird er für den nächsten Schritt benötigt.
 \end{minipage}
 \\\\\\
 Dasselbe muss mehrmals wiederholt werden, so wird jeweils das nächste Folgeglied auf die Abzissenachse abgebildet (\textcolor{red}{rote} Punkte). Daraus kann man dann eine \textcolor{blue}{Tendenz} erkennen\textcolor{blue}{, die die Entwicklung der Folgeglieder beschreibt}. Je nach dem, was für eine Tendenz zu erkennen ist, kann man verschiedene Schlüsse bezüglich der Entwicklung der Folge schließen. In diesem Falle wird deutlich, dass die Folge konvergiert, der Grenzwert ist die Schnittstelle zwischen der Hilfsfunktion und der Hauptdiagonalen, es fehlt nur noch diesen zu berechnen.
 \\\\
 %web2 weg
-\begin{minipage}{0.7\textwidth}
+\begin{minipage}{0.6\textwidth}
 \definecolor{ffqqqq}{rgb}{1,0,0}
 \definecolor{ttqqqq}{rgb}{0.2,0,0}
 \definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm,scale=0.9]
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm,scale=0.7]
 \begin{axis}[
 x=1cm,y=1cm,
 axis lines=middle,
@@ -227,19 +196,18 @@ ytick={-1,0,...,8},]
 \end{axis}
 \end{tikzpicture}
 \end{minipage}
-\begin{minipage}
-$$h(x)=x; f(x)=2\sqrt{x}+2$$\\
-$$h(x)=g(x)\Leftrightarrow x-2\sqrt{x}-2=0$$\\
-$$\Rightarrow x_1=\left(\dfrac{2+\sqrt{12}}{2}\right)^2$$\\
+\begin{minipage}{0.4\textwidth}
+$$h(x)=x; f(x)=2\sqrt{x}+2$$
+$$h(x)=g(x)\Leftrightarrow x-2\sqrt{x}-2=0$$
+$$\Rightarrow x_1=\left(\dfrac{2+\sqrt{12}}{2}\right)^2$$
 $$g=x_1$$
 \end{minipage}
-
-\\
-Es gibt andere mögliche Tendenzen, hier ein paar Besipiele:\\\\\\\\
-\begin{minipage}{0,45\textwidth}
+\\\\\\
+Es gibt andere mögliche Tendenzen, hier ein paar Beispiele:\\\\
+\begin{minipage}{0.5\textwidth}
 Die divergierende Treppe, es gibt also keinen Grenzwert, man kann den uneigendlichen Grenzwert aber ablesen, hier ist der Grenzwert der Folge $a_n$ mit $a_{n+1}=-\dfrac{3}{2}a_n-4$ und $a_0=5$: $-\infty$
 \end{minipage}
-\begin{minipage}{0,5\textwidth}
+\begin{minipage}{0.5\textwidth}
 \definecolor{rvwvcq}{rgb}{0.08235294117647059,0.396078431372549,0.7529411764705882}
 \definecolor{ffqqqq}{rgb}{1,0,0}
 \definecolor{wrwrwr}{rgb}{0.3803921568627451,0.3803921568627451,0.3803921568627451}
@@ -285,10 +253,8 @@ ytick={-8,-6,...,10},]
 \end{minipage}
 
 
-\begin{minipage}{0,5\textwidth}
-Die konvergierende Spirale, es gibt also einen Grenzwert, den man erneut mit der Schnittstelle zwischen Funktion und Hauptdiagonale ermitteln kann. Hier konvergiert die Folge  $a_n$ mit $a_{n+1}=\dfrac{4}{a_n}+1$ und $a_1=1$
-\end{minipage}
-\begin{minipage}{0,5\textwidth}
+
+\begin{minipage}{0.5\textwidth}
 \definecolor{ffqqqq}{rgb}{1,0,0}
 \definecolor{wrwrwr}{rgb}{0.3803921568627451,0.3803921568627451,0.3803921568627451}
 \definecolor{wvvxds}{rgb}{0.396078431372549,0.3411764705882353,0.8235294117647058}
@@ -335,6 +301,9 @@ ytick={-1,0,...,7},]
 \end{scriptsize}
 \end{axis}
 \end{tikzpicture}
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+Die konvergierende Spirale, es gibt also einen Grenzwert, den man erneut mit der Schnittstelle zwischen Funktion und Hauptdiagonale ermitteln kann. Hier konvergiert die Folge  $a_n$ mit $a_{n+1}=\dfrac{4}{a_n}+1$ und $a_1=1$
 \end{minipage}
 
 \begin{Bemerkung}
