--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -262,7 +262,7 @@ Die Funktion $f$ hat eine Ableitungsfunktion $f'$. Falls $f$...
 \item monoton fallend auf $I$ ist, dann ist $f'(x)\leq0$, \quad $\forall x \in I$
 \item konstant auf $I$ ist, dann ist $f'(x)=0$, \quad $\forall x \in I$
 \end{enumerate}
-Beim Aufstellen der Monotonietabelle sind Definitinsl"ucken zu beachten.\\
+Beim Aufstellen der Monotonietabelle sind Definitionsl"ucken zu beachten.\\
 \\
 Es handelt sich dabei um eine Tabelle, die die Definitionsmenge in Intervalle mit monotonen Steigungsverhalten unterteilt wird. Das Monotonieverhalten ver"andert sich an Extrem- oder Polstellen.\\
 \end{Definition}
@@ -329,14 +329,14 @@ Eine Funktion $f$ ist ...
 \begin{description}
 \item[$\bullet$] \textbf{surjektiv}, wenn sie jedes Element der Zielmenge mindestens einmal als Funktionswert annimmt. Das heißt, jedes Element der Zielmenge hat mindestens ein Urbild.\\\\
 $$\forall y \in W_{f} \quad \exists x \in D_{f}:\quad f(x)=y $$\\\\
-$|D_{f}| \geq |W_{f}|$. \quadBeispiel: $\qquad f(x)=\sin{x} $\\
+$|D_{f}| \geq |W_{f}|$. \quad Beispiel: $\qquad f(x)=\sin{x} $\\
 
 \item[$\bullet$] \textbf{injektiv}, wenn zu jedem Element der Wertmenge höchstens ein (oder auch gar kein) Element der Definitionsmenge existiert. Zwei verschiedene Elemente $x_{1}$ und $x_{2}$ der Definitionsmenge bilden also nie auf den gleichen Term $y$ der Wertmenge ab.\\\\
 $$\forall x_{1}, x_{2} \in D_{f} :\qquad f(x_{1}) = f(x_{2}) \quad \Rightarrow \quad x_{1}=x_{2} $$\\\\
 \danger \quad Dies bedeutet \textbf{nicht}:\quad $\forall x_{1}, x_{2} \in D_{f} :\qquad x_{1} = x_{2} \quad\Rightarrow\quad f(x_{1}) = f(x_{2}) $ \\\\
 $|D_{f}| \leq |W_{f}|$.\quad Beispiel: $\quad f(x)=2x$ \quad mit \quad $D_{f}=\Z$\\
 
-\item[$\bullet$] \textbf{bijektiv}, wenn eine vollständige Paarbildung existiert. Jedes Element der Wertmenge besitzt genau ein Element der Definitionsmenge und jedes Element der Definitionsmenge besitzt genau ein Element der Wertmenge. Eine Funktion ist genau dann bijektiv, wenn sie sowohl sujektiv, als auch injektiv ist.\\\
+\item[$\bullet$] \textbf{bijektiv}, wenn eine vollständige Paarbildung existiert. Jedes Element der Wertmenge besitzt genau ein Element der Definitionsmenge und jedes Element der Definitionsmenge besitzt genau ein Element der Wertmenge. Eine Funktion ist genau dann bijektiv, wenn sie sowohl surjektiv, als auch injektiv ist.\\\
 
 $|D_{f}| = |W_{f}|$. \quad Beispiel: $\qquad f(x)=x^3 $\\\\
 \end{description}
