--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -4,11 +4,11 @@
 Eine Reihe ist eine Folge, deren Glieder die Partialsummen einer anderen Folge ist. Das bedeutet, dass das $n-te$ Glied der Reihe, die Summe der ersten $n$ Glieder einer anderen Folge ist. \\
 Man hat also:
 
-\begin{enumerate}
+\begin{itemize}
 \item Mit Startglied $a_{0}$: $s_{n}=\sum\limits_{i=0}^{n-1}a_{i}$
 \item Mit Startglied $a_{1}$: $s_{n}=\sum\limits_{i=1}^{n}a_{i}$
 \item Mit Startglied $a_{x}$: $s_{n}=\sum\limits_{i=x}^{x+n-1}a_{i}$
-\end{enumerate}
+\end{itemize}
 
 \end{Definition}
 
